@@ -1,6 +1,7 @@
 0.9.x - not released yet
 
 Features:
+- Log the reason for geocoding failures (#51)
 - Add a composer.json (#46)
 
 Bug fixes:
